--- a/FrontEnd/static/styles/dashboardStyle/dashMenu.scss
+++ b/FrontEnd/static/styles/dashboardStyle/dashMenu.scss
@@ -2,7 +2,7 @@
 
 @media only screen and (min-width: 850px) {
     .dashboard {
-        background: #CC4100;
+        background: $timeLogin;
         min-width: 100px;
         height: calc(100vh - 47px);
         position: fixed;
@@ -55,7 +55,7 @@
             @include flexCenter(row);
     
             &:hover {
-                background: #AD1E15;
+                background: black;
                 opacity: 70%;
             }
         }
@@ -84,7 +84,7 @@
 
 @media only screen and (max-width: 849px) {
     .dashboard {
-        background: #CC4100;
+        background: $timeLogin;
         min-width: 100%;
         height: 45px;
         position: fixed;
@@ -107,7 +107,7 @@
                     @include flexCenter(row);
             
                     &:hover {
-                        background: #AD1E15;
+                        background: black;
                         opacity: 70%;
                     }
                 }
