--- a/FrontEnd/static/styles/dashboardStyle/profileInfo.css
+++ b/FrontEnd/static/styles/dashboardStyle/profileInfo.css
@@ -112,7 +112,7 @@
           flex-direction: row;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  height: 300px;
+  height: 350px;
   width: 500px;
   border-radius: 2.5px;
   -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
@@ -143,6 +143,7 @@
 }
 
 .boss .boss_info {
+  min-height: 150px;
   width: 200px;
 }
 
@@ -170,7 +171,7 @@
 .boss .email_boss {
   width: 100%;
   height: 25px;
-  background: orange;
+  background: #4F4F4F;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -193,7 +194,7 @@
 .boss .d_c {
   width: 100%;
   height: 25px;
-  background: #cc4100;
+  background: #4F4F4F;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -258,8 +259,6 @@
   min-height: 200px;
   max-height: 200px;
   width: 300px;
-  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
-          box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
 }
 
 .pwd_input {
