--- a/FrontEnd/static/styles/dashboardStyle/profileInfo.scss
+++ b/FrontEnd/static/styles/dashboardStyle/profileInfo.scss
@@ -40,7 +40,7 @@
 .boss {
     @include flexCenter(row);
     justify-content: space-around;
-    height: 300px;
+    height: 350px;
     width: 500px;
     border-radius: 2.5px;
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
@@ -58,6 +58,7 @@
     }
 
     .boss_info {
+        min-height: 150px;
         width: 200px;
     }
 
@@ -73,7 +74,7 @@
     .email_boss {
         width: 100%;
         height: 25px;
-        background: orange;
+        background: $timeLogin;
         @include flexCenter(row);
         border-radius: 2.5px;
         font-size: 12.5px;
@@ -84,7 +85,7 @@
     .d_c {
         width: 100%;
         height: 25px;
-        background: $conBtn;
+        background: $timeLogin;
         @include flexCenter(row);
         border-radius: 2.5px;
         font-size: 11px;
@@ -112,7 +113,7 @@
     min-height: 200px;
     max-height: 200px;
     width: 300px;
-    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
+    // box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
 }
 
 .pwd_input {
