--- a/FrontEnd/static/styles/employees/employee_login.css
+++ b/FrontEnd/static/styles/employees/employee_login.css
@@ -1,128 +1,3 @@
-/* main container */
-/* conBtn is the color used for the span (box) holding the word Con
- * in the logo (ConTime)
- * and it's also used in the login (submit) button
- */
-/* timeLogin is the color used in the word Time in the logo (ConTime)
- * and it's also used in teh login (h1) heading in forms
- */
-/* conFormLogin is the color used in the word con in the logo (ConTime)
- * and its also used as a background color for the form 
- */
-/* input box border color shadow on click */
-/* color for error */
-/* flash message colors */
-/* Mixin font-size and weight for ConTime Logo */
-/* input box background and border */
-/* Flex Center Mixin */
-/* Place for the logo and the website description */
-/* conBtn is the color used for the span (box) holding the word Con
- * in the logo (ConTime)
- * and it's also used in the login (submit) button
- */
-/* timeLogin is the color used in the word Time in the logo (ConTime)
- * and it's also used in teh login (h1) heading in forms
- */
-/* conFormLogin is the color used in the word con in the logo (ConTime)
- * and its also used as a background color for the form 
- */
-/* input box border color shadow on click */
-/* color for error */
-/* flash message colors */
-/* Mixin font-size and weight for ConTime Logo */
-/* input box background and border */
-/* Flex Center Mixin */
-.web-description {
-  width: 40%;
-  height: 720px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.web-description .logo-container {
-  height: 100px;
-  width: 367px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.web-description .logo-container .con {
-  font-size: 70px;
-  font-weight: 900;
-  height: 100px;
-  background: #cc4100;
-  color: white;
-  width: 180px;
-  text-align: right;
-}
-
-.web-description .logo-container .time {
-  font-size: 70px;
-  font-weight: 900;
-  height: 100px;
-  color: #4F4F4F;
-  text-align: left;
-}
-
-.web-description .description {
-  width: 367px;
-  color: #4F4F4F;
-  font-size: 30px;
-  font-weight: 600;
-  padding-top: 25px;
-}
-
-.web-description .description .about {
-  color: #4F4F4F;
-  font-size: 15px;
-}
-
-@media only screen and (max-width: 1000px) {
-  .web-description {
-    height: 100px;
-    width: 100%;
-  }
-  .web-description .logo-container {
-    height: 80px;
-    width: 300px;
-  }
-  .web-description .logo-container .con {
-    height: 80px;
-    width: 140px;
-    font-size: 55px;
-  }
-  .web-description .logo-container .time {
-    height: 80px;
-    color: #4F4F4F;
-    font-size: 55px;
-  }
-  .web-description .description {
-    display: none;
-  }
-}
-
 /* Place for the form */
 /* conBtn is the color used for the span (box) holding the word Con
  * in the logo (ConTime)
@@ -155,7 +30,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 60%;
-  height: 720px;
+  height: 500px;
 }
 
 .form-container .form {
@@ -248,7 +123,7 @@
 
 .form-container .form h1 {
   color: #4F4F4F;
-  font-size: 40px;
+  font-size: 25px;
   margin-bottom: 50px;
 }
 
@@ -297,22 +172,10 @@
   margin-top: 15px;
 }
 
-@media only screen and (max-width: 700px) {
-  .form-container {
-    margin-top: -100px;
-  }
-}
-
-@media only screen and (max-width: 1000px) {
-  .form-container {
-    width: 100%;
-  }
-}
-
-.container {
-  width: 100%;
-  height: 720px;
-  margin: 0 5% 0 5%;
+.logo-container {
+  margin-top: 100px;
+  height: 100px;
+  width: 367px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -328,24 +191,28 @@
           flex-direction: row;
 }
 
+.logo-container .con {
+  font-size: 70px;
+  font-weight: 900;
+  height: 100px;
+  background: #cc4100;
+  color: white;
+  width: 180px;
+  text-align: right;
+}
+
+.logo-container .time {
+  font-size: 70px;
+  font-weight: 900;
+  height: 100px;
+  color: #4F4F4F;
+  text-align: left;
+  margin-left: -0.5px;
+}
+
 @media only screen and (max-width: 1000px) {
-  /* main container */
-  .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: 100vh;
-    margin-top: 50px;
+  .form-container {
+    width: 100%;
   }
 }
-/*# sourceMappingURL=login.css.map */
+/*# sourceMappingURL=employee_login.css.map */
