--- a/FrontEnd/static/styles/employees/employeecalendar.scss
+++ b/FrontEnd/static/styles/employees/employeecalendar.scss
@@ -6,7 +6,8 @@
     @include flexCenter(row);
 
     .info {
-        font-size: 13.5px;
+        font-size: 15px;
+        font-weight: 500;
         box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
         width: 80%;
         height: 40px;
@@ -18,9 +19,9 @@
 .employer {
     width: 40%;
     height: 20px;
-    font-size: 12.5px;
+    font-size: 15px;
     color: white;
-    background: $timeLogin;
+    background: #cc4100;
     border-radius: 2px;
     @include flexCenter(row);
     margin-left: 5px;
@@ -43,10 +44,49 @@
     }
 }
 
+.save-view {
+    margin-top: 20px;
+    width: 100%;
+    height: 60px;
+    @include flexCenter(row);
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
+    justify-content: space-evenly;
+
+    .past, .save {
+        width: 250px;
+        height: 40px;
+        @include flexCenter(row);
+        padding-left: 0;
+        border-radius: 5px;
+        color: white;
+        font-size: 17px;
+    }
+
+    .sep {
+        border: 1px solid $timeLogin;
+        height: 40px;
+    }
+
+    .past {
+        background: $timeLogin;
+    }
+
+    .save {
+        background: $conBtn;
+    }
+}
 
 
-table {
+.choice {
+    margin-right: 2.5%;
+    width: 25px;
+    height: 25px;
+}
+
+.cal-table {
+    margin-bottom: 100px;
     margin-top: 50px;
+    width: 80%;
 }
 
 input {
@@ -60,6 +100,14 @@ input {
         outline: none !important;
         
     }
+}
+
+.des {
+    width: 100%;
+}
+
+.loc {
+    width: 80%;
 }
 
 .hour {
@@ -83,5 +131,17 @@ td {
             outline: none !important;
             
         }
+    }
+
+    .save-view {
+        .past, .save {
+            width: 40%;
+            height: 40px;
+        }
+    }
+
+    .cal-table {
+        margin-top: 50px;
+        width: 100%;
     }
 }
