make employee page dynamic

--- a/FrontEnd/static/styles/employees/employeecalendar.scss
+++ b/FrontEnd/static/styles/employees/employeecalendar.scss
@@ -62,10 +62,10 @@
         font-size: 17px;
     }
 
-    .sep {
-        border: 1px solid $timeLogin;
-        height: 40px;
-    }
+    // .sep {
+    //     border: 1px solid $timeLogin;
+    //     height: 40px;
+    // }
 
     .past {
         background: $timeLogin;
