--- a/FrontEnd/templates/employee_login.html
+++ b/FrontEnd/templates/employee_login.html
@@ -47,7 +47,7 @@
         </form>
     </div>
 
-    <script src=""></script>
+    <script src="{{ url_for('static', filename='JS/login.js') }}"></script>
 
     <footer></footer>
 </body>
