--- a/FrontEnd/templates/employeecalendar.html
+++ b/FrontEnd/templates/employeecalendar.html
@@ -51,10 +51,10 @@
           <table class="table">
               <thead class="thead-ligth">
                 <tr>
-                  <th scope="col">WEEK: Oct. 18 - Oct. 24</th>
+                  <th scope="col">WEEK: {{ week_start_end }}</th>
                   <th></th>
                   <th></th>
-                  <th scope="col">TOTAL HOURS: 37.5</th>
+                  <th scope="col">TOTAL HOURS: {{ form.total_hours() }}</th>
                 </tr>
               </thead>
               <thead class="thead-dark">
