--- a/FrontEnd/static/styles/dashboardStyle/topMenu.css
+++ b/FrontEnd/static/styles/dashboardStyle/topMenu.css
@@ -39,6 +39,7 @@
           justify-content: space-between;
   -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .topMenu .logo-container {
