--- a/FrontEnd/static/styles/dashboardStyle/topMenu.scss
+++ b/FrontEnd/static/styles/dashboardStyle/topMenu.scss
@@ -10,6 +10,7 @@
     @include flexCenter(row);
     justify-content: space-between;
     box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+    z-index: 1;
 
     .logo-container {
         height: 45px;
