--- a/FrontEnd/static/styles/employees/employeecalendar.css
+++ b/FrontEnd/static/styles/employees/employeecalendar.css
@@ -78,6 +78,70 @@
   margin-left: 5px;
 }
 
+.table-responsive .profile-container {
+  width: 100%;
+  margin-top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.table-responsive .profile-container .info {
+  font-size: 15px;
+  font-weight: 500;
+  -webkit-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.15);
+          box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.15);
+  width: 80%;
+  height: 40px;
+  border-radius: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.table-responsive .employer {
+  width: 10%;
+  height: 20px;
+  font-size: 15px;
+  color: white;
+  background: #cc4100;
+  border-radius: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-left: 5px;
+}
+
 @media only screen and (max-width: 750px) {
   .profile-container {
     width: 100%;
@@ -115,6 +179,45 @@
   }
   .profile-container .info {
     width: 80%;
+  }
+  .table-responsive .profile-container {
+    width: 100%;
+    margin-top: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .table-responsive .profile-container .info {
+    font-size: 15px;
+    font-weight: 500;
+    -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
+            box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
+    width: 80%;
+    height: 40px;
+    border-radius: 2.5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -155,8 +258,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
-          box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.15);
+          box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.15);
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -182,6 +285,7 @@
   border-radius: 5px;
   color: white;
   font-size: 17px;
+  padding: 0;
 }
 
 .save-view .past {
@@ -206,10 +310,8 @@
 
 input {
   width: 50%;
+  border-radius: 0px;
   border: none;
-  border-radius: 2.5px;
-  -webkit-box-shadow: 0 0 1px #719ECE;
-          box-shadow: 0 0 1px #719ECE;
   padding-left: 5%;
 }
 
@@ -238,20 +340,20 @@ td {
   input {
     width: 100%;
     border: none;
-    border-radius: 2.5px;
-    -webkit-box-shadow: 0 0 1px #719ECE;
-            box-shadow: 0 0 1px #719ECE;
     padding-left: 10%;
   }
   input:focus {
     outline: none !important;
   }
+  .employer {
+    min-width: 40px;
+  }
   .save-view .past, .save-view .save {
+    padding-left: 0;
     width: 40%;
     height: 40px;
   }
   .cal-table {
-    margin-top: 50px;
     width: 100%;
   }
   .week_info {
