--- a/FrontEnd/static/styles/employees/employeecalendar.scss
+++ b/FrontEnd/static/styles/employees/employeecalendar.scss
@@ -1,5 +1,9 @@
 @import "../loginStyle/variablesMixin";
 
+.cal-table {
+    // z-index: -5;
+}
+
 .profile-container {
     width: 80%;
     margin-top: 100px;
@@ -27,6 +31,35 @@
     margin-left: 5px;
 }
 
+.table-responsive {
+    .profile-container {
+        width: 100%;
+        margin-top: 0;
+        @include flexCenter(row);
+    
+        .info {
+            font-size: 15px;
+            font-weight: 500;
+            box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0,0,0,0.15);
+            width: 80%;
+            height: 40px;
+            border-radius: 0px;
+            @include flexCenter(row);
+        }
+    }
+
+    .employer {
+        width: 10%;
+        height: 20px;
+        font-size: 15px;
+        color: white;
+        background: #cc4100;
+        border-radius: 2px;
+        @include flexCenter(row);
+        margin-left: 5px;
+    }
+}
+
 @media only screen and (max-width: 750px) {
     .profile-container {
         width: 100%;
@@ -40,6 +73,24 @@
 
         .info {
             width: 80%;
+        }
+    }
+
+    .table-responsive {
+        .profile-container {
+            width: 100%;
+            margin-top: 0px;
+            @include flexCenter(row);
+        
+            .info {
+                font-size: 15px;
+                font-weight: 500;
+                box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
+                width: 80%;
+                height: 40px;
+                border-radius: 2.5px;
+                @include flexCenter(row);
+            }
         }
     }
 }
@@ -56,7 +107,7 @@
     width: 100%;
     height: 60px;
     @include flexCenter(row);
-    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.15);
+    box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0,0,0,0.15);
     justify-content: space-evenly;
 
     .past, .save {
@@ -67,6 +118,7 @@
         border-radius: 5px;
         color: white;
         font-size: 17px;
+        padding: 0;
     }
 
     // .sep {
@@ -98,9 +150,10 @@
 
 input {
     width: 50%;
+    // border: none;
+    border-radius: 0px;
+    // box-shadow: 0 0 1px $inputBorderShadow;
     border: none;
-    border-radius: 2.5px;
-    box-shadow: 0 0 1px $inputBorderShadow;
     padding-left: 5%;
 
     &:focus {
@@ -130,8 +183,6 @@ td {
     input {
         width: 100%;
         border: none;
-        border-radius: 2.5px;
-        box-shadow: 0 0 1px $inputBorderShadow;
         padding-left: 10%;
     
         &:focus {
@@ -140,15 +191,19 @@ td {
         }
     }
 
+    .employer {
+        min-width: 40px;
+    }
+
     .save-view {
         .past, .save {
+            padding-left: 0;
             width: 40%;
             height: 40px;
         }
     }
 
     .cal-table {
-        margin-top: 50px;
         width: 100%;
     }
 
