--- a/FrontEnd/static/styles/registerStyle/_formContainer.scss
+++ b/FrontEnd/static/styles/registerStyle/_formContainer.scss
@@ -5,6 +5,7 @@
     @include flexCenter(column);
     width: 60%;
     height: 720px;
+    margin-top: 25px;
 
     .form-register {
         @include flexCenter(column);
