--- a/FrontEnd/templates/profile_info.html
+++ b/FrontEnd/templates/profile_info.html
@@ -3,7 +3,7 @@
 {% block profile_info %}
     <div class="wrapper">
         <div class="boss">
-            <img src="{{ url_for('static', filename='images/boss_profile.png') }}" alt="icon_boss">
+            <img src="{{ url_for('static', filename='images/administrator.png') }}" alt="icon_boss">
             <div class="boss_info">
                 <p class="f_n">{{ user.first_name }} {{ user.last_name }}</p>
                 <p class="email_boss">{{ user.email }}</p>
