--- a/FrontEnd/static/styles/employees/employeecalendar.css
+++ b/FrontEnd/static/styles/employees/employeecalendar.css
@@ -14,6 +14,14 @@
 /* Mixin font-size and weight for ConTime Logo */
 /* input box background and border */
 /* Flex Center Mixin */
+button {
+  border: none;
+}
+
+button:focus {
+  outline: none !important;
+}
+
 .profile-container {
   width: 80%;
   margin-top: 100px;
@@ -312,7 +320,6 @@ input {
   width: 50%;
   border-radius: 0px;
   border: none;
-  padding-left: 5%;
 }
 
 input:focus {
