--- a/FrontEnd/static/styles/employees/employeecalendar.scss
+++ b/FrontEnd/static/styles/employees/employeecalendar.scss
@@ -4,6 +4,20 @@
     // z-index: -5;
 }
 
+button {
+    border: none;
+
+    &:focus {
+        outline: none !important;
+    }
+}
+
+// .btn {
+//     width: 50px;
+//     @include flexCenter(row);
+//     border: 1px solid red;
+// }
+
 .profile-container {
     width: 80%;
     margin-top: 100px;
@@ -120,7 +134,6 @@
         font-size: 17px;
         padding: 0;
     }
-
     // .sep {
     //     border: 1px solid $timeLogin;
     //     height: 40px;
@@ -154,7 +167,6 @@ input {
     border-radius: 0px;
     // box-shadow: 0 0 1px $inputBorderShadow;
     border: none;
-    padding-left: 5%;
 
     &:focus {
         outline: none !important;
