--- a/FrontEnd/templates/appLayout.html
+++ b/FrontEnd/templates/appLayout.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Boostrap tables -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap-theme.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}">
+    <!-- End Bootstrap -->
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon_io/apple-touch-icon.png') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon_io/favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon_io/favicon-16x16.png') }}">
@@ -14,6 +18,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/profile.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/employees.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/profileInfo.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/main_dash.css') }}">
+
     <SCRIPT src="https://code.jquery.com/jquery-3.2.1.min.js"></SCRIPT>
 
     {% if title %}
