--- a/FrontEnd/templates/employeecalendar.html
+++ b/FrontEnd/templates/employeecalendar.html
@@ -125,7 +125,7 @@
         </div>
         <div class="save-view">
           <div class="past">
-            <a style="text-decoration: none; -webkit-appearance: none; color: white;" href="{{ url_for('dash.past_calendars') }}">PAST calendars</a>
+            <a style="text-decoration: none; -webkit-appearance: none; color: white;" href="{{ url_for('dash.past_calendars') }}">ALL calendars</a>
           </div>
           <span class="sep"></span>
           <input class="save" type="submit" value="SAVE calendar">
