--- a/FrontEnd/static/styles/dashboardStyle/main_dash.css
+++ b/FrontEnd/static/styles/dashboardStyle/main_dash.css
@@ -14,10 +14,29 @@
 /* Mixin font-size and weight for ConTime Logo */
 /* input box background and border */
 /* Flex Center Mixin */
+.main-dash::-webkit-scrollbar {
+  width: 1em;
+  height: 5px;
+}
+
+.main-dash::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.main-dash::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
 .main-dash {
-  min-width: 190px;
-  max-width: 190px;
-  height: 80%;
+  min-width: 80%;
+  max-width: 80%;
+  min-height: 200px;
+  max-height: 200px;
+  overflow: auto;
+  left: 50px;
+  top: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -31,12 +50,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow: auto;
-  position: absolute;
-  padding-top: 10%;
-  left: 50px;
-  top: 100px;
-  border-radius: 2.5px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .main-dash .prevent {
@@ -47,15 +62,88 @@
   margin: 20px;
 }
 
+.main-dash .total {
+  min-width: 125px;
+  min-height: 140px;
+  max-width: 125px;
+  max-height: 140px;
+  margin: 10px;
+  -webkit-box-shadow: 0px 0px 1px 1px orange;
+          box-shadow: 0px 0px 1px 1px orange;
+  border-radius: 2.5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  justify-content: center;
+  background: cornsilk;
+}
+
+.main-dash .total .h {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 100px;
+  height: 50px;
+  font-size: 12.5px;
+  font-weight: 600;
+}
+
+.main-dash .total .h .hour {
+  width: 100%;
+  height: 20px;
+  font-size: 12.5px;
+  color: white;
+  background: #cc4100;
+  border-radius: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 .main-dash .employee-hour {
   min-width: 125px;
   min-height: 140px;
   max-width: 125px;
   max-height: 140px;
-  margin: 20px;
+  margin: 10px;
   -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.15);
   border-radius: 2.5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,7 +163,11 @@
 }
 
 .main-dash .employee-hour:first-child {
-  margin-top: 150px;
+  margin-left: 150px;
+}
+
+.main-dash .employee-hour:last-child {
+  margin-right: 50px;
 }
 
 .main-dash .employee-hour:hover {
@@ -128,11 +220,13 @@
           flex-direction: row;
   width: 100px;
   height: 35px;
+  font-size: 12.5px;
+  font-weight: 500;
 }
 
 .main-dash .employee-hour .h .hour {
   width: 40%;
-  height: 15px;
+  height: 17px;
   font-size: 12.5px;
   color: white;
   background: #cc4100;
@@ -154,7 +248,6 @@
 }
 
 .cal-table {
-  position: relative;
   min-width: 70%;
   max-width: 70%;
 }
@@ -163,7 +256,7 @@
   margin-top: -25px;
 }
 
-.table th {
+.table th td {
   text-align: center;
 }
 
